@@ -1,3 +1,9 @@
+2008-08-29  Arno Rehn  <arno@arnorehn.de>
+
+	* Support char as a method return type.
+	* Add a QIODeviceWrapper class which provides a System.IO.Stream interface
+	  to a QIODevice.
+
 2008-08-10  Richard Dale  <richard.j.dale@gmail.com>
 
 	* Fix a bug reported by Stefano Crocco where primitives types and QStrings
